<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audio_record">AudioRecordActivity</string>
    <string name="func_audio">录音Demo</string>
    <string name="func_camera">拍照Demo</string>
    <string name="func_map">地图Demo</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_web_map">WebMapActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="func_appwidget">更新appwidget</string>
    <string name="func_mockgps">模拟地址</string>
</resources>
