<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cn.guolf.androiddemo.ui.MainActivity">

    <Button
        android:id="@+id/btnAudio"
        android:text="@string/func_audio" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_below="@id/btnAudio"
        android:text="@string/func_camera" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnMap"
        android:layout_below="@id/btnCamera"
        android:text="@string/func_map" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAppWidget"
        android:layout_below="@id/btnMap"
        android:text="@string/func_appwidget" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnMockGps"
        android:layout_below="@id/btnAppWidget"
        android:text="@string/func_mockgps" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
